CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(BFCSources build run)
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}" "/usr/local/include")
LINK_DIRECTORIES("/usr/local/lib")

ADD_LIBRARY(bfc_dynamic SHARED ${BFCSources})
SET_TARGET_PROPERTIES(bfc_dynamic PROPERTIES LINKER_LANGUAGE C)

ADD_LIBRARY(bfc_static STATIC ${BFCSources})
SET_TARGET_PROPERTIES(bfc_static PROPERTIES LINKER_LANGUAGE C)

ADD_EXECUTABLE(bfc main.c)
TARGET_LINK_LIBRARIES(bfc bfc_dynamic)
